--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,11 @@
     ],
     "paths": {
       "@/*": [
-        "./*",
+        "./*"
       ],
-      "react": [ "./node_modules/@types/react" ]
+      "react": [
+        "./node_modules/@types/react"
+      ]
     },
     "strictNullChecks": true
   },
@@ -35,10 +37,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "build/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
   ]
 }
- 
